Tags und Kategorien wurden gelöscht. Es muss die logik eingebaut werden aber die .xml datein sind noch mit beidem.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,5 @@ dependencies {
     implementation libs.firebase.storage
     implementation libs.play.services.auth
     implementation(libs.androidx.swiperefreshlayout)
+    implementation 'com.opencsv:opencsv:5.7.1'
 }
