Lokalisierung und Benutzererfahrung verbessert, Onboarding und Profil-Setup
Dieser Commit implementiert die folgenden Änderungen:

- **Onboarding und Profil-Setup:**
    - Ein neuer Onboarding-Flow (`OnboardingActivity`) wird beim ersten Start der App angezeigt.
    - Eine `ProfileSetupActivity` ermöglicht es neuen Benutzern, ihren Namen einzugeben.
    - Der `AuthActivity` leitet Benutzer nun je nach Status zum Onboarding, Profil-Setup oder zur Haupt-App weiter.
- **Verbesserte Kategorielokalisierung und -behandlung:**
    - `CategoryLocaleMapper` hinzugefügt, um Kategorienamen zwischen internen Schlüsseln und lokalisierten Strings zu übersetzen.
    - Kategorien werden jetzt intern mit einem `userId`-Feld versehen (Defaults haben eine leere `userId`).
    - `CategoryDao` wurde aktualisiert, um Kategorien pro Benutzer zu verwalten und Duplikate (Groß-/Kleinschreibung irrelevant) zu prüfen.
    - `CategoryRepository` synchronisiert benutzerdefinierte und anonym erstellte Kategorien mit Firestore und lädt Kategorien basierend auf dem eingeloggten Benutzer.
    - `MainViewModel` verwendet nun Kategorie-Keys statt direkt lokalisierter Namen für die Filterung und zeigt lokalisierte Namen an.
    - In `AddItemActivity` und `DetailActivity` werden Kategorien nun lokalisiert angezeigt und beim Speichern der kanonische Key verwendet.
    - Die `InventoryApp` führt beim Start eine einmalige Normalisierung durch, um bestehende Item-Kategorien auf kanonische Schlüssel und Ressourcen-IDs zu migrieren.
    - Standardkategorien werden initial mit Keys statt lokalisierten Strings gespeichert.
    - Bei der Erstellung einer neuen Kategorie im `CategorySelectionDialogFragment` wird der Benutzer über den Speicherstatus informiert (lokal/Cloud).
- **Firestore-Regeln und Storage-Regeln:**
    - Firestore-Regeln (`FirestoreDatabase.txt`) aktualisiert, um den Zugriff auf Benutzerprofile und deren Unterkollektionen (Kategorien) sowie Items basierend auf der `userId` zu steuern.
    - Stor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,16 @@
         android:localeConfig="@xml/locales_config">
 
         <activity
+            android:name="de.lshorizon.whatswhere.ui.activity.ProfileSetupActivity"
+            android:exported="false"
+            android:theme="@style/Theme.WhatsWhere" />
+
+        <activity
+            android:name="de.lshorizon.whatswhere.ui.activity.OnboardingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.WhatsWhere" />
+
+        <activity
             android:name="de.lshorizon.whatswhere.ui.activity.AuthActivity"
             android:exported="true"
             android:theme="@style/Theme.App.Starting">
